password management process (#6)
* password management process

* update requirements

* test mutmut

* test ci

* env variable

* env variables

* update setup.cfg

* security hotspots

* duplication issue phone check

* refoacto email

* fix tests

* common.js

* password utils.js

* common password form

* duplication issue

* working on change password

* more in password utils

* fix sonar

* fix_test

* fix ci mutmut

* mutmut

* fix issue sonar

* fix

* isort
